--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "googleapis": "^148.0.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
