--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "googleapis": "^148.0.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0"
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
